# microres

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: ExpectCompileFail.cmake  microresConfig.cmake.in  mres_config.h.in
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  ISSUES.md  PATTERNS.md  PORTING_GUIDE.md  VERIFICATION.md
include/: mres.h  mres_config.h
src/: mres.c
tests/: Makefile  harness_selftest.c  test_all.c
tests/compile_fail/: conflicting_generated_config.c  invalid_attempts.c  invalid_jitter.c  unsupported_abi_change.c
tests/compile_fail/include/conflicting_generated_config/: mres_config.h
tests/compile_fail/include/invalid_attempts/: mres_config.h
tests/compile_fail/include/invalid_jitter/: mres_config.h
tests/consumers/add_subdirectory/: CMakeLists.txt  main.c
tests/consumers/cpp11/: main.cpp
tests/consumers/cpp17/: main.cpp
tests/consumers/cpp20/: main.cpp
tests/consumers/find_package/: CMakeLists.txt  main.c
